--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,6 @@ jobs:
     name: "Build ${{matrix.arch}}"
 
     runs-on: ubuntu-latest
-    env:
-      ANDROID_NDK_HOME: "${ANDROID_SDK_ROOT}/ndk-bundle"
-
     steps:
       - uses: actions/checkout@v2
 
@@ -25,6 +22,7 @@ jobs:
           sudo apt update
           sudo apt install -y meson libxrandr-dev libxxf86vm-dev libxcb-*-dev libx11-xcb-dev libxfixes-dev libdrm-dev libx11-dev
           pip3 install mako ninja
+          export ANDROID_NDK_HOME="$ANDROID_SDK_ROOT/ndk-bundle"
           mkdir -p /tmp/build/lib/pkgconfig
           cp libdrm.pc /tmp/build/lib/pkgconfig/
           wget https://github.com/Vera-Firefly/libepoxy/raw/master/include/EGL/eglplatform.h -P EGL
